<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_marginBottom="75dp"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".uilayer.ingredientstorage.AddEditViewIngredientFragment">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="SAVE AND EXIT"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_image_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeNameTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="Recipe Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipe_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/preparationTimeTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Preparation Time (in mins.)"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeNameTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/preparation_time_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/servingsTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Servings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preparationTimeTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/servings_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/servingsTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentsTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Comments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comments_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Ingredients"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/list_of_ingredients"
            app:layout_constraintStart_toStartOf="@+id/list_of_ingredients"
            app:layout_constraintTop_toBottomOf="@+id/commentsTextLayout" />

        <ImageView
            android:id="@+id/recipe_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/noimage"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_of_ingredients" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_ingredient_to_recipe"
            style="@style/FabButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add"
            app:fabCustomSize="40dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_ingredient_from_recipe"
            style="@style/RecipeButtons"
            android:layout_width="40dp"
            android:layout_height="41dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            android:src="@android:drawable/ic_delete"
            app:fabCustomSize="40dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_ingredient_to_recipe" />

        <ListView
            android:id="@+id/list_of_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="45dp"
            android:drawSelectorOnTop="false"
            android:nestedScrollingEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/recipe_image_view"
            app:layout_constraintEnd_toEndOf="@+id/commentsTextLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/commentsTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/commentsTextLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
