...
        android:clipToPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_ingredient_button"
        style="@style/FabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:borderWidth="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sort_ingredient_button"
        style="@style/FabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
...
