...
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:text="Sort ingredients list by"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ingredient_sort_name"
            android:layout_width="match_parent"
...
