...
            app:boxStrokeColor="@color/listcolor2_selected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_unit_textinputlayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredient_category_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

...
